syntax = "proto3";
package cmds;

option go_package = "github.com/ymz-ncnk/go-client-server-communication-benchmarks/projects/cmd-stream/tcp_protobuf/cmds";

// protoc -I=. -I=../../../common --go_out=. --go_opt=paths=source_relative ./cmds/cmds.proto

import "data.proto";

message EchoCmd {
  common.ProtoData proto_data = 1; // reference the existing message
}
